--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,12 @@
+<h1>Propiedades</h1>
+<button [disabled]="btnDisabled">Enviar</button>
+<input type="text" [value]="person.name" />
+<progress max="100" [value]="person.age"></progress>
+<img width="100" [src]='person.avatar'>
+
+<hr>
 <h1>Hola mundo</h1>
 <h2>{{ 'Hola mundo'.repeat(3) }}</h2>
 <h3>Hola soy {{ name }}</h3>
-<p>3 + 3 = {{ 3 + 3 }}</p>
+<p>3 + 3 = {{ 3 + 3 }} y tengo {{age}}</p>
 <img src={{img}} alt="my image">
