--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,15 @@
 
+<h1>*ngFor</h1>
+<button (click)="addName()">Add name</button>
+<input type="text" required [(ngModel)]="newName" />
+<ul>
+    <li *ngIf="names.length === 0">No hay nombres</li>
+    <li *ngFor=" let name of names; index as i">
+        {{ i + name }}
+        <button (click)="deleteName(i)">Delete {{name}}</button>
+    </li>
+</ul>
+<hr>
 <h1>*ngIf</h1>
 <input type="text" required [(ngModel)]="person.name" />
 <p *ngIf="person.name === 'nicolas'">Soy Nicolas</p>
