--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,16 @@
+<h1>ngSwitch</h1>
+<input type="text" required [(ngModel)]="person.name" />
+<div [ngSwitch]="person.name">
+    <p *ngSwitchCase="'nicolas'">La persona es Nicolas</p>
+    <p *ngSwitchCase="'julian'">La persona es Julian</p>
+    <p *ngSwitchCase="'camilo'">La persona es Camilo</p>
+    <p *ngSwitchDefault >No hace match</p>
+</div>
+<!-- <p *ngIf="person.name === 'nicolas'">La persona es Nicolas</p>
+<p *ngIf="person.name === 'julian'">La persona es Julian</p>
+<p *ngIf="person.name === 'camilo'">La persona es Camilo</p> -->
 
+<hr>
 <h1>*ngFor Objets</h1>
 <div>
     <div *ngFor="let product of products">
