--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,9 +12,9 @@
 
 <hr>
 <h1>*ngFor Objets</h1>
-<div>
+<div class="product--grid">
     <div *ngFor="let product of products">
-        <img width="250" [src]="product.image" alt="image">
+        <img [src]="product.image" alt="image">
         <h2>{{ product.price }}</h2>
         <p>{{ product.name }}</p>
     </div>
@@ -69,4 +69,4 @@
 <h2>{{ 'Hola mundo'.repeat(3) }}</h2>
 <h3>Hola soy {{ name }}</h3>
 <p>3 + 3 = {{ 3 + 3 }} y tengo {{age}}</p>
-<img src={{img}} alt="my image">
+<img width="100" src={{img}} alt="my image">
