--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -31,5 +31,17 @@
         grid-template-columns: repeat(5,1fr);
     }
 }
-
+.message-error{
+    background: red;
+    padding: 10px;
+    opacity: 0;
+    transition: all linear .5s;
+    &.invalid {
+        opacity: 1;
+    }
+}
+.styles{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+}
 
