--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,33 @@
+<h1>NgClass & NgStyle</h1>
+<input type="text" required #nameInput4="ngModel" [(ngModel)]="person.name">
+<hr class="line-error"
+[ngClass]="{
+    'cirulo': nameInput4.valid,
+    'invalid': nameInput4.invalid
+}">
+<p class="message-error" [class.invalid]="nameInput4.invalid">El campo es requerido</p>
+<div class="styles">
+    <div>
+        <input type="number" [(ngModel)]="box.width">
+        <input type="number" [(ngModel)]="box.height">
+        <input type="color" [(ngModel)]="box.background">
+    </div>
+        <div [ngStyle]="{
+            'width.px': box.width,
+            'height.px': box.height,
+            'background-color': box.background,
+            'diplay': 'block'
+
+        }"></div>
+</div>
+
+
+
 <h1>Class & Style</h1>
 <input type="text" required #nameInput2="ngModel" [(ngModel)]="person.name">
-<p class="message-error" [class.invalid]="nameInput2.invalid">El campo es requerido</p>
+<p class="message-error" [class.invalid]="nameInput2.touched">El campo es requerido</p>
+
+
 <label [style.font-style]="nameInput2.invalid ? 'italic':'normal'">Nombre</label>
 <input type="text" required #nameInput3="ngModel" [(ngModel)]="person.name">
 <p [style.font-style]="nameInput2.invalid ? 'italic':'normal'">Texto texto</p>
