--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -40,6 +40,19 @@
         opacity: 1;
     }
 }
+.line-error {
+    height: 0;
+    border-bottom: 1px solid;
+    &.invalid{
+        border-color: red;
+    }
+    &.valid{
+        border-color: green;
+    }
+    &.cirulo{
+        border-color: violet;
+    }
+}
 .styles{
     display: grid;
     grid-template-columns: repeat(2,1fr);
