--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -129,11 +129,11 @@
 <button [disabled]="btnDisabled">Enviar</button>
 <input type="text" [value]="person.name" (keyup)="changeName($event)"/>
 <progress max="100" [value]="person.age"></progress>
-<img width="100" [src]='person.avatar'>
+<img width="150" [src]='img' alt="imagen con property binding">
 
 <hr>
 <h1>Hola mundo</h1>
 <h2>{{ 'Hola mundo'.repeat(3) }}</h2>
 <h3>Hola soy {{ name }}</h3>
 <p>3 + 3 = {{ 3 + 3 }} y tengo {{age}}</p>
-<img width="100" src={{img}} alt="my image">
+<img width="100" src={{img}} alt="image con interplation">
