--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -102,22 +102,28 @@
 <p *ngIf="person.name === 'nicolas'">Soy Nicolas</p>
 <p *ngIf="person.name === 'julian' && person.age === 18; else myBlock">Soy Julian</p>
 <ng-template #myBlock>
-    <p>Bloque de else</p>
+    <p>No eres Julian</p>
 </ng-template>
 <hr>
 <h1>NgModel</h1>
+<p>Arma: {{ person.arma }}</p>
+<input type="text" required #nameInput="ngModel" [(ngModel)]="person.arma" />
 <p>Nombre: {{ person.name }}</p>
 <input type="text" required #nameInput="ngModel" [(ngModel)]="person.name" />
 <p>Valid: {{ nameInput.valid }}</p>
 <p>Age: {{ person.age }}</p>
 <input type="number" max="18" min="10" required #ageInput="ngModel" [(ngModel)]="person.age" />
 <p>Valid: {{ ageInput.valid }}</p>
+<h2>NgModel ejemplo con variable color</h2>
+<input [(ngModel)]="color" type="text">
+<hr>
+
 <select [(ngModel)]="seleccion"(change)="mostrarSeleccion()">
     <option value="opcion1">Opción 1</option>
     <option value="opcion2">Opción 2</option>
     <option value="opcion3">Opción 3</option>
   </select>
-  
+
 <hr>
 <h1>Eventos</h1>
 <button [disabled]="btnDisabled">Enviar</button>
