--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -55,3 +55,12 @@
     grid-template-columns: repeat(2,1fr);
 }
 
+button {
+    background-color: #7fddf0;
+    color: white;
+    border: none;
+    padding: 10px;
+    border: 1px solid rgb(179, 2, 153);
+    border-radius: 5px;
+    text-shadow: 1px 1px 1px black;
+}
